<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".Functionality.barcodescan.Display2">


    <ImageView
        android:contentDescription="@string/this_is_preview_of_product"
        android:paddingTop="30dp"
        android:layout_centerInParent="true"
        android:id="@+id/product_preview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        app:srcCompat="@drawable/black_cotton_polo" />

    <TextView
        android:id="@+id/display_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="203dp"
        android:text="@string/i_will_display_product_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/display_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="164dp"
        android:text="@string/i_will_display_price"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/display_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp"
        android:text="@string/i_will_display_category"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/display_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp"
        android:text="@string/i_will_display_product_id"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/display_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/size_avaliable_12_15"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/display_addToFavts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:tooltipText="@string/add_to"
        android:layout_toEndOf="@+id/display_product_name"
        app:srcCompat="@drawable/ic_star_black_24dp"
        android:contentDescription="TODO" />

</RelativeLayout>