<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffff"
    android:orientation="vertical">

<android.support.v7.widget.Toolbar
    android:id="@+id/toolbars"
    android:background="@color/bg_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


</android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="wrap_content"
            android:layout_height="165dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/imageedit_1_6204205203" />

        <Button

            android:id="@+id/scanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle2"
            android:text="@string/scan_a_product"
            android:textColor="#fff"
            android:textSize="19sp" />

        <Button
            android:id="@+id/favtBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle2"
            android:text="@string/see_favourties"
            android:textColor="#fff"
            android:textSize="19sp" />

        <Button
            android:id="@+id/OffersBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle2"
            android:text="@string/view_offers"
            android:textColor="#fff"
            android:textSize="19sp" />


    </LinearLayout>



</LinearLayout>