<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg5"
    tools:context=".AccountActivity.LoginActivityPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/WelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_to_qwickly"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/InfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/texty"
            android:textColor="#fff"
            android:textSize="14sp"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="
center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/SignUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstylepink"
                android:text="@string/join_now"
                android:textColor="#fff"
                android:textSize="11sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/BtnVist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstyle2"
                android:text="@string/visit_our_site"
                android:textColor="#fff"
                android:textSize="11sp"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EmailLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:hint="Enter Email"
            android:inputType="text"
            android:textColor="?android:attr/colorForeground" />

        <EditText
            android:id="@+id/PasswordLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:textColor="?android:attr/colorForeground" />

        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonstylepink"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:text="Log In"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#07000000"
            android:layout_marginTop="20dip"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>