<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".AccountActivity.SignUpActivity"
    android:orientation="horizontal">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/logosignup"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:contentDescription=""
            android:src="@drawable/imageedit_1_6204205203"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="@color/bg_register" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="@color/bg_register"
            tools:ignore="InvalidImeActionId" />

        <EditText
            android:id="@+id/MblSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_local_phone_black_24dp"
            android:drawablePadding="10dp"
            android:focusableInTouchMode="true"
            android:hint="Mobile Number"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="@color/bg_register" />

        <EditText
            android:id="@+id/UserNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="10dp"
            android:focusableInTouchMode="true"
            android:hint="Username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="@color/bg_register" />

        <Button
            android:id="@+id/sign_up_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/buttonstyle2"
            android:text="Register"
            android:textColor="#fff"
            android:textStyle="bold" />


        <!-- Link to Login Screen -->


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle2"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/input_login"
            android:textSize="15sp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>

